// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::AggregationBranch snapshots renders with all checked 1`] = `
<div
  className="aggregation-branch"
>
  <li
    className="parent m-form-field m-form-field__checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={true}
      className="flex-fixed a-checkbox"
      id="issuefoo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label"
      htmlFor="issuefoo"
    />
    <button
      className="flex-all a-btn a-btn__link"
      onClick={[Function]}
      title="foo"
    >
      <span>
        foo
      </span>
      <svg
        class="cf-icon-svg"
        viewBox="0 0 988.7 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M923.6 967.6c-17.3 0-33.8-6.8-46-19L494.1 565 110.5 948.5c-25.6 25.1-66.8 24.8-91.9-.8-24.8-25.3-24.8-65.8 0-91.1l429.5-429.5c25.4-25.4 66.5-25.4 91.9 0l429.6 429.5c25.4 25.4 25.4 66.5.1 91.9-12.3 12.3-28.8 19.1-46.1 19.1z"
        />
      </svg>
    </button>
    <span
      className="flex-fixed parent-count"
    >
      <span>
        99
      </span>
    </span>
  </li>
  <ul
    className="children"
  >
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•bar"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•bar"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label"
      />
      <label
        className="flex-all bucket-key body-copy"
        htmlFor="issuefoo•bar"
      >
        bar
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          90
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•baz"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•baz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label"
      />
      <label
        className="flex-all bucket-key body-copy"
        htmlFor="issuefoo•baz"
      >
        baz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          5
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•qaz"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•qaz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label"
      />
      <label
        className="flex-all bucket-key body-copy"
        htmlFor="issuefoo•qaz"
      >
        qaz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          4
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`component::AggregationBranch snapshots renders with indeterminate 1`] = `
<div
  className="aggregation-branch"
>
  <li
    className="parent m-form-field m-form-field__checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={false}
      className="flex-fixed a-checkbox"
      id="issuefoo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label indeterminate"
      htmlFor="issuefoo"
    />
    <button
      className="flex-all a-btn a-btn__link"
      onClick={[Function]}
      title="foo"
    >
      <span>
        foo
      </span>
      <svg
        class="cf-icon-svg"
        viewBox="0 0 988.7 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M923.6 967.6c-17.3 0-33.8-6.8-46-19L494.1 565 110.5 948.5c-25.6 25.1-66.8 24.8-91.9-.8-24.8-25.3-24.8-65.8 0-91.1l429.5-429.5c25.4-25.4 66.5-25.4 91.9 0l429.6 429.5c25.4 25.4 25.4 66.5.1 91.9-12.3 12.3-28.8 19.1-46.1 19.1z"
        />
      </svg>
    </button>
    <span
      className="flex-fixed parent-count"
    >
      <span>
        99
      </span>
    </span>
  </li>
  <ul
    className="children"
  >
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•bar"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•bar"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label"
      />
      <label
        className="flex-all bucket-key body-copy"
        htmlFor="issuefoo•bar"
      >
        bar
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          90
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•baz"
        checked={false}
        className="flex-fixed a-checkbox"
        id="issuefoo•baz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label"
      />
      <label
        className="flex-all bucket-key body-copy"
        htmlFor="issuefoo•baz"
      >
        baz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          5
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•qaz"
        checked={false}
        className="flex-fixed a-checkbox"
        id="issuefoo•qaz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label"
      />
      <label
        className="flex-all bucket-key body-copy"
        htmlFor="issuefoo•qaz"
      >
        qaz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          4
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`component::AggregationBranch snapshots renders with none checked 1`] = `
<div
  className="aggregation-branch"
>
  <li
    className="parent m-form-field m-form-field__checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={false}
      className="flex-fixed a-checkbox"
      id="issuefoo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label"
      htmlFor="issuefoo"
    />
    <button
      className="flex-all a-btn a-btn__link"
      onClick={[Function]}
      title="foo"
    >
      <span>
        foo
      </span>
      <svg
        class="cf-icon-svg"
        viewBox="0 0 988.2 1200"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M494.1 967.2c-17.3 0-33.8-6.8-46-19L18.6 518.6c-25.1-25.6-24.8-66.8.8-91.9 25.3-24.8 65.8-24.8 91.1 0l383.6 383.6 383.6-383.6c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L540.1 948.1c-12.2 12.2-28.7 19.1-46 19.1z"
        />
      </svg>
    </button>
    <span
      className="flex-fixed parent-count"
    >
      <span>
        99
      </span>
    </span>
  </li>
</div>
`;
